--- a/Last/src/main/resources/templates/login.html
+++ b/Last/src/main/resources/templates/login.html
@@ -9,7 +9,7 @@
 
 <body>
 <div id="loginDiv">
-    <form action="/request-demo/loginServlet" method="post" id="form">
+    <form action="" id="form">
         <h1 id="loginMsg">LOGIN IN</h1>
         <p>Username:<input id="username" name="username" type="text"></p>
 
